@@ -1,3 +1,8 @@
+2005-09-21  Sven Panne  <sven.panne@aedion.de>
+
+	* src/al_types.h, src/alc/alc_context.c: Synchronized names of
+	device structs to reduce #ifdefs in OpenAL headers.
+
 2005-09-18  Sven Panne  <sven.panne@aedion.de>
 
 	* src/arch/interface/interface_sound.c: Silenced warnings about
